--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "web_api"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.18"
+axum = { version = "0.6.18", features = ["headers"] }
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.4", features = ["cors"] }
+jsonwebtoken = "8.3.0"
+validator = { version = "0.16.0", features = ["derive"] }
 
 sea-orm = { version = "0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
 serde_json = "1.0.96"
@@ -17,6 +19,8 @@ serde = { version = "1", features = ["derive"] }
 dotenvy = "0.15.7"
 anyhow = "1.0.71"
 thiserror = "1.0.40"
+chrono = "0.4.24"
+serde_urlencoded = "0.7.1"
 
 [profile.release]
 lto = true
