--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6.20", features = ["headers"] }
-tokio = { version = "1.33.0", features = ["full"] }
-tower-http = { version = "0.4.4", features = ["cors"] }
+tokio = { version = "1.34.0", features = ["full"] }
+tower-http = { version = "=0.4.4", features = ["cors"] }
 jsonwebtoken = "9.1.0"
 validator = { version = "0.16.1", features = ["derive"] }
 
-sea-orm = { version = "0.12.4", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
+sea-orm = { version = "0.12.7", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
 serde_json = "1.0.108"
-serde = { version = "1.0.190", features = ["derive"] }
+serde = { version = "1.0.193", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 
 dotenvy = "0.15.7"
