--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,31 +1,34 @@
 [package]
 name = "web_api"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.18"
-tokio = { version = "1", features = ["full"] }
-hyper = { version = "0.14.26", features = ["full"] }
-tower = "0.4.13"
-tower-http = { version = "0.4", features = ["cors"] }
+axum = { version = "0.8.1" }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
+tokio = { version = "1.43.0", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["cors"] }
+jsonwebtoken = "9.3.0"
+validator = { version = "0.20.0", features = ["derive"] }
 
-sea-orm = { version = "0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
-serde_json = "1.0.96"
-serde = { version = "1", features = ["derive"] }
+sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio", "macros"] }
+serde_json = "1.0.138"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_urlencoded = "0.7.1"
 
-models={path="./models"}
-anyhow = "1.0.71"
 dotenvy = "0.15.7"
-recoil = "1.0.0"
-
-[workspace]
-members = [".","models"]
+anyhow = "1.0.95"
+thiserror = "2.0.11"
+chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
 
 [profile.release]
 lto = true
 strip = true
-opt-level = "z"
 codegen-units = 1
+panic = "abort"
+opt-level = 3
+
+[lints.rust]
+unused_variables = "allow"
